--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -29,7 +29,7 @@ body{
   display: flex;
   width: 40px;
   height: 40px;
-  background-color: rgba(177.0000046491623, 208.0000028014183, 244.0000006556511, 1);
+  background-color: rgba(0, 208.0000028014183, 244.0000006556511, 1);
   color: white;
   margin: 2px;
   justify-content: center;
