--- a/app/views/games/score.html.erb
+++ b/app/views/games/score.html.erb
@@ -2,5 +2,6 @@
   <div class="container">
     <p><%= @answer %></p>
     <p>you got this score: <%= @score %></p>
+    <%= link_to("new game?", "/")%>
   </div>
 </div>
